kubernetes/pihole-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole # Name of the deployment
  namespace: pihole # Name of the namespace
spec:
  selector:
    matchLabels:
      app: pihole-app # Name of your application
  replicas: 3 # Number of replicas
  template:
    metadata:
      labels:
        app: pihole-app # Name of your application
    spec:
      containers:
        # Containers are the individual pieces of your application that you want
        # to run.
        - name: pihole # Name of the container
          image: pihole/pihole:latest # The image you want to run
          ports:
            # Ports are the ports that your application uses.
            - containerPort: 80 # The port that your application uses
            - containerPort: 53
            - containerPort: 67
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole-data
            - mountPath: /etc/dnsmasq.d
              name: pihole-dnsmasq
      volumes:
        # Volumes are the persistent storage that your application uses.
        - name: pihole-data # Name of the volume
          persistentVolumeClaim:
            claimName: pvc0 # Name of the persistent volume claim
        # Volumes are the persistent storage that your application uses.
        - name: pihole-dnsmasq # Name of the volume
          persistentVolumeClaim:
            claimName: pvc1 # Name of the persistent volume claim
---
apiVersion: v1
kind: Service
metadata:
  name:  pihole-dns
  namespace: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole-app
  ports:
    - protocol: UDP
      port: 53
      targetPort: 53
---
apiVersion: v1
kind: Service
metadata:
  name: pihole
  namespace: pihole
spec:
  type: LoadBalancer
  selector:
    app: pihole-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "pihole-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  ingressClassName: public
  rules:
    - host: pi.hole
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole
                port:
                  number: 80
